fix missing absence color on small view

--- a/src/main/css/bundles/time-entries.css
+++ b/src/main/css/bundles/time-entries.css
@@ -383,7 +383,7 @@
   .time-entry-box__input__fields {
     flex: 1 0 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
   }
 
   .time-entry-box__controls {
@@ -550,10 +550,6 @@
         border-bottom-left-radius: var(--time-entries-box-border-radius);
         width: 14rem;
       }
-    }
-
-    .time-entry-box__input__fields {
-      flex-direction: row;
     }
 
     .time-entry-box__controls {
